k8s/overlays/prod/patch-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: team05
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: frontend
          image: ghcr.io/OWNER/Team05HW-frontend:latest
          imagePullPolicy: Always
